Fixed an issue with a menu item appearing out of place.

--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ div.menu a {
     display:block;
     position:relative;
     padding:0;
-    overflow:hidden;
+    /*overflow:hidden;*/
     width:222px;
 }
 
